syntax = "proto3";

package payment;

option go_package = "shared/proto/payment";

service PaymentService {
    rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse);
    rpc HandleWebhook(HandleWebhookRequest) returns (HandleWebhookResponse); 
}

message CreatePaymentRequest {
    string booking_id = 1;
    int64 user_id = 2;
    double amount = 3;
    double unit_price = 4;
    int32 quantity = 5;
    string currency = 6; // e.g. "idr", "usd"
}

message CreatePaymentResponse {
    string payment_id = 1;
    string payment_url = 2; // URL redirect ke Stripe
    string status = 3;
}

message HandleWebhookRequest {
  bytes payload = 1;      // Raw JSON body
  string signature = 2;   // Header 'Stripe-Signature'
}

message HandleWebhookResponse {
  bool success = 1;
}